<resources>
    <string name="app_name">CurrencyConverterApp</string>
    <string name="app_title">Converterno</string>
    <string name="currency">Currency</string>
    <string name="converter">Converter</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="amount">amount</string>
    <string name="convert">Convert</string>
    <string-array name="currency_codes">
        <item>CAD</item>
        <item>EUR</item>
        <item>EGP</item>
        <item>USD</item>
        <item>HKD</item>
        <item>ISK</item>
        <item>PHP</item>
        <item>DKK</item>
        <item>HUF</item>
        <item>CZK</item>
        <item>AUD</item>
        <item>RON</item>
        <item>SEK</item>
        <item>IDR</item>
        <item>INR</item>
        <item>BRL</item>
        <item>RUB</item>
        <item>HRK</item>
        <item>JPY</item>
        <item>THB</item>
        <item>CHF</item>
        <item>SGD</item>
        <item>PLN</item>
        <item>BGN</item>
        <item>CNY</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>ZAR</item>
        <item>USD</item>
        <item>MXN</item>
        <item>ILS</item>
        <item>GBP</item>
    </string-array>
    <string-array name="rates">
        <item>USD</item>
        <item>CAD</item>
        <item>EGP</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>RUB</item>
        <item>AUD</item>
    </string-array>
    <string name="notification">NOTIFICATION</string>
    <string name="settings">Settings</string>
    <string name="allow_notification">Allow notification every 12h</string>
    <string name="notification_base">Select a base currency</string>
    <string name="notification_base_info">choose a base currency which the rates should be appeared on the notification.</string>

</resources>